[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-rag"
version = "0.0.1"
description = "Precise retrieval with broad context. Query with NXQL—a composable language for hybrid retrieval."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Clay Gendron", email = "your.email@example.com"}
]
keywords = ["rag", "retrieval", "graph", "networkx", "vector-search", "llm", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "networkx>=3.0",
    "pydantic>=2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

vector = [
    "sentence-transformers>=2.0",
    "faiss-cpu>=1.7.0",
]

db = [
    "duckdb>=0.9.0",
    "sqlalchemy>=2.0",
]

mlflow = [
    "mlflow>=2.9.0",
]

server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

all = [
    "network-rag[dev,vector,db,mlflow,server]",
]

[project.urls]
Homepage = "https://github.com/claygendron/network_rag"
Repository = "https://github.com/claygendron/network_rag"
Issues = "https://github.com/claygendron/network_rag/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=network_rag --cov-report=term-missing"
